--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "ant-design-vue": "^1.4.12",
     "axios": "^0.19.0",
     "element-ui": "^2.10.1",
     "vue": "^2.5.2",
