--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.19.0",
     "view-design": "^4.1.3",
     "vue": "^2.5.2",
+    "vue-axios": "^2.1.5",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.3"
   },
