--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "ant-design-vue": "^1.4.12",
-    "axios": "^0.19.0",
+    "axios": "^0.19.2",
+    "vant": "^2.10.14",
     "view-design": "^4.1.3",
     "vue": "^2.5.2",
     "vue-axios": "^2.1.5",
