--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "serve": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "mock": "webpack-dev-server --inline --progress --env=mock --config build/webpack.dev.conf.js",
     "start": "npm run dev",
-    "build": "node build/build.js"
+    "build": "node build/build.js vue-cli-serve build"
   },
   "dependencies": {
     "ant-design-vue": "^1.4.12",
